Spelling corrections for 'not enough information to generate this report' message

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -1255,7 +1255,7 @@ msgid "Reports"
 msgstr "Reports"
 
 #: reports/templates/reports/report_base.html:19
-msgid "There is no enough data to generate this report."
+msgid "There is not enough data to generate this report."
 msgstr "Es gibt nicht genügend Daten um diesen Report zu generieren."
 
 #: core/models.py:206
