--- a/locale/nl/LC_MESSAGES/django.po
+++ b/locale/nl/LC_MESSAGES/django.po
@@ -35,6 +35,8 @@ msgid ""
 "If supported by browser, the dashboard will only refresh when visible, and "
 "also when receiving focus."
 msgstr ""
+"Indien ondersteund door de browser, zal het dashboard alleen worden vernieuwd "
+"indien zichbaar, of als het focus krijgt."
 
 #: babybuddy/models.py:26
 msgid "disabled"
@@ -74,31 +76,31 @@ msgstr "30 min."
 
 #: babybuddy/models.py:37
 msgid "Hide Empty Dashboard Cards"
-msgstr ""
+msgstr "Verberg Lege Dashboard Kaarten"
 
 #: babybuddy/models.py:42
 msgid "Hide data older than"
-msgstr ""
+msgstr "Verberg data ouder dan"
 
 #: babybuddy/models.py:43
 msgid "This setting controls which data will be shown in the dashboard."
-msgstr ""
+msgstr "Deze instelling bepaald welke data zichtbaar is op het dashboard."
 
 #: babybuddy/models.py:49
 msgid "show all data"
-msgstr ""
+msgstr "laat alle data zien"
 
 #: babybuddy/models.py:50
 msgid "1 day"
-msgstr ""
+msgstr "1 dag"
 
 #: babybuddy/models.py:51
 msgid "2 days"
-msgstr ""
+msgstr "2 dagen"
 
 #: babybuddy/models.py:52
 msgid "3 days"
-msgstr ""
+msgstr "3 dagen"
 
 #: babybuddy/models.py:53
 msgid "1 week"
@@ -106,7 +108,7 @@ msgstr ""
 
 #: babybuddy/models.py:54
 msgid "4 weeks"
-msgstr ""
+msgstr "4 weken"
 
 #: babybuddy/models.py:60
 msgid "Language"
@@ -135,7 +137,7 @@ msgstr "Engels"
 
 #: babybuddy/settings/base.py:174
 msgid "Dutch"
-msgstr ""
+msgstr "Nederlands"
 
 #: babybuddy/settings/base.py:175
 msgid "French"
@@ -143,7 +145,7 @@ msgstr "Frans"
 
 #: babybuddy/settings/base.py:176
 msgid "Finnish"
-msgstr ""
+msgstr "Fins"
 
 #: babybuddy/settings/base.py:177
 msgid "German"
@@ -151,15 +153,15 @@ msgstr "Duits"
 
 #: babybuddy/settings/base.py:178
 msgid "Italian"
-msgstr ""
+msgstr "Italiaans"
 
 #: babybuddy/settings/base.py:179
 msgid "Polish"
-msgstr ""
+msgstr "Pools"
 
 #: babybuddy/settings/base.py:180
 msgid "Portuguese"
-msgstr ""
+msgstr "Portugees"
 
 #: babybuddy/settings/base.py:181
 msgid "Spanish"
@@ -248,7 +250,7 @@ msgid "Note"
 msgstr "Notitie"
 
 #: babybuddy/templates/babybuddy/nav-dropdown.html:69
-#: babybuddy/templates/babybuddy/nav-dropdown.html:225
+#: babybuddy/templates/babybuddy/nav-dropdown.html:281
 #: babybuddy/templates/babybuddy/welcome.html:42 core/models.py:330
 #: core/models.py:331 core/models.py:334
 #: core/templates/core/sleep_confirm_delete.html:7
@@ -271,7 +273,7 @@ msgid "Temperature"
 msgstr "Temperatuur"
 
 #: babybuddy/templates/babybuddy/nav-dropdown.html:81
-#: babybuddy/templates/babybuddy/nav-dropdown.html:238
+#: babybuddy/templates/babybuddy/nav-dropdown.html:294
 #: babybuddy/templates/babybuddy/welcome.html:50 core/models.py:537
 #: core/models.py:538 core/models.py:541
 #: core/templates/core/timer_detail.html:59
@@ -284,7 +286,7 @@ msgid "Tummy Time"
 msgstr "Buikliggen"
 
 #: babybuddy/templates/babybuddy/nav-dropdown.html:87
-#: babybuddy/templates/babybuddy/nav-dropdown.html:172 core/models.py:567
+#: babybuddy/templates/babybuddy/nav-dropdown.html:186 core/models.py:567
 #: core/models.py:581 core/models.py:582 core/models.py:585
 #: core/templates/core/weight_confirm_delete.html:7
 #: core/templates/core/weight_form.html:13
@@ -339,27 +341,55 @@ msgid "Notes"
 msgstr "Notities"
 
 #: babybuddy/templates/babybuddy/nav-dropdown.html:164
+msgid "Measurements"
+msgstr "Metingen"
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:178
 msgid "Temperature reading"
 msgstr "Temperatuur meting"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:178
+#: babybuddy/templates/babybuddy/nav-dropdown.html:192
 msgid "Weight entry"
 msgstr "Gewicht ingave"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:192
+#: babybuddy/templates/babybuddy/nav-dropdown.html:200
+msgid "Height"
+msgstr "Lengte"
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:206
+msgid "Height entry"
+msgstr "Lengte ingave"
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:214
+msgid "Head Circumference"
+msgstr "Hoofd omtrek"
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:220
+msgid "Head Circumference entry"
+msgstr "Hoofd omtrek ingave"
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:228
+msgid "BMI"
+msgstr ""
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:234
+msgid "BMI entry"
+msgstr "MBI ingave"
+
+#: babybuddy/templates/babybuddy/nav-dropdown.html:248
 msgid "Activities"
 msgstr "Activiteiten"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:199
+#: babybuddy/templates/babybuddy/nav-dropdown.html:255
 #: reports/graphs/diaperchange_lifetimes.py:27
 msgid "Changes"
 msgstr "Verschoningen"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:205
+#: babybuddy/templates/babybuddy/nav-dropdown.html:261
 msgid "Change"
 msgstr "Verschoning"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:212
+#: babybuddy/templates/babybuddy/nav-dropdown.html:268
 #: babybuddy/templates/babybuddy/welcome.html:34 core/models.py:244
 #: core/templates/core/feeding_confirm_delete.html:7
 #: core/templates/core/feeding_form.html:13
@@ -369,15 +399,15 @@ msgstr "Verschoning"
 msgid "Feedings"
 msgstr "Voedingen"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:231
+#: babybuddy/templates/babybuddy/nav-dropdown.html:287
 msgid "Sleep entry"
 msgstr "Slaap ingave"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:244
+#: babybuddy/templates/babybuddy/nav-dropdown.html:300
 msgid "Tummy Time entry"
 msgstr "Buikliggen ingave"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:269
+#: babybuddy/templates/babybuddy/nav-dropdown.html:325
 #: babybuddy/templates/babybuddy/user_list.html:17
 #: babybuddy/templates/babybuddy/user_password_form.html:7
 #: babybuddy/templates/babybuddy/user_settings_form.html:7 core/models.py:434
@@ -385,11 +415,11 @@ msgstr "Buikliggen ingave"
 msgid "User"
 msgstr "Gebruiker"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:271
+#: babybuddy/templates/babybuddy/nav-dropdown.html:327
 msgid "Password"
 msgstr "Wachtwoord"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:272
+#: babybuddy/templates/babybuddy/nav-dropdown.html:331
 msgid "Logout"
 msgstr "Uitloggen"
 
@@ -401,7 +431,7 @@ msgstr "Site"
 msgid "API Browser"
 msgstr "API browser"
 
-#: babybuddy/templates/babybuddy/nav-dropdown.html:276
+#: babybuddy/templates/babybuddy/nav-dropdown.html:337
 #: babybuddy/templates/babybuddy/user_confirm_delete.html:7
 #: babybuddy/templates/babybuddy/user_form.html:13
 #: babybuddy/templates/babybuddy/user_list.html:4
@@ -877,7 +907,7 @@ msgstr "Versterkte moedermelk"
 
 #: core/models.py:218
 msgid "Solid food"
-msgstr ""
+msgstr "Vast voedsel"
 
 #: core/models.py:221 core/templates/core/feeding_list.html:30
 msgid "Type"
@@ -901,11 +931,11 @@ msgstr "Beide borsten"
 
 #: core/models.py:229
 msgid "Parent fed"
-msgstr ""
+msgstr "Ouder voeding"
 
 #: core/models.py:230
 msgid "Self fed"
-msgstr ""
+msgstr "Zelf voeding"
 
 #: core/models.py:233 core/templates/core/feeding_list.html:29
 msgid "Method"
@@ -913,7 +943,7 @@ msgstr "Methode"
 
 #: core/models.py:305
 msgid "Napping"
-msgstr ""
+msgstr "Dutten"
 
 #: core/models.py:407 core/templates/core/timer_list.html:25
 msgid "Name"
@@ -1007,7 +1037,7 @@ msgstr "Voeg luierverschoning toe"
 
 #: core/templates/core/diaperchange_list.html:29
 msgid "Contents"
-msgstr ""
+msgstr "Inhoud"
 
 #: core/templates/core/diaperchange_list.html:73
 msgid "No diaper changes found."
@@ -1158,7 +1188,7 @@ msgstr ""
 
 #: core/templates/core/timer_detail.html:84
 msgid "Delete timer"
-msgstr ""
+msgstr "Verwijder timer"
 
 #: core/templates/core/timer_form.html:22
 #: core/templates/core/timer_list.html:15 core/templates/core/timer_nav.html:23
@@ -1248,16 +1278,16 @@ msgstr "Duur is te lang."
 #: core/templates/timeline/_timeline.html:48
 #, python-format
 msgid "%(since)s since previous"
-msgstr ""
+msgstr "%(since)s sinds vorige"
 
 #: core/templates/timeline/_timeline.html:56
 #: dashboard/templates/dashboard/child_button_group.html:38
 msgid "Edit"
-msgstr ""
+msgstr "Aanpassen"
 
 #: core/templates/timeline/_timeline.html:80
 msgid "No events"
-msgstr ""
+msgstr "Geen gebeurtenissen"
 
 #: core/templatetags/datetime.py:60
 msgid "Today"
@@ -1269,7 +1299,7 @@ msgstr ""
 
 #: core/templatetags/duration.py:23
 msgid "0 days"
-msgstr ""
+msgstr "0 dagen"
 
 #: core/timeline.py:44
 #, python-format
@@ -1294,7 +1324,7 @@ msgstr "%(child)s is wakker geworden."
 #: core/timeline.py:120
 #, python-format
 msgid "Amount: %(amount).0f"
-msgstr ""
+msgstr "Hoeveelheid: %(amount).0f"
 
 #: core/timeline.py:125
 #, python-format
@@ -1396,7 +1426,7 @@ msgstr "Laatste luierverschoning"
 #: dashboard/templates/cards/tummytime_last.html:13
 #, python-format
 msgid "<div>%(since)s ago</div> <small>%(time)s</small>"
-msgstr ""
+msgstr "<div>%(since)s geleden</div> <small>%(time)s</small>"
 
 #: dashboard/templates/cards/diaperchange_types.html:14
 msgid "Past Week"
@@ -1425,12 +1455,12 @@ msgstr "%(key)s dagen geleden"
 
 #: dashboard/templates/cards/feeding_day.html:6
 msgid "Today's Feeding"
-msgstr ""
+msgstr "Voeding vandaag"
 
 #: dashboard/templates/cards/feeding_day.html:20
 #, python-format
 msgid "%(count)s feeding entries"
-msgstr ""
+msgstr "%(count)s voeding ingaves"
 
 #: dashboard/templates/cards/feeding_last.html:6
 msgid "Last Feeding"
@@ -1481,7 +1511,7 @@ msgstr "Niet genoeg gegevens"
 
 #: dashboard/templates/cards/statistics.html:42
 msgid "No data yet"
-msgstr ""
+msgstr "Nog geen data"
 
 #: dashboard/templates/cards/timer_list.html:12
 #, python-format
@@ -1559,7 +1589,7 @@ msgstr "Totaal slaapjes"
 
 #: dashboard/templates/dashboard/child_button_group.html:30
 msgid "Tummy Time Durations (Sum)"
-msgstr ""
+msgstr "Duur Buikliggen (Som)"
 
 #: dashboard/templatetags/cards.py:277
 msgid "Diaper change frequency"
@@ -1587,11 +1617,11 @@ msgstr "Gewichtsverandering per week"
 
 #: dashboard/templatetags/cards.py:361
 msgid "Feeding frequency (past 3 days)"
-msgstr ""
+msgstr "Voeding frequenties (afgelopen 3 dagen)"
 
 #: dashboard/templatetags/cards.py:365
 msgid "Feeding frequency (past 2 weeks)"
-msgstr ""
+msgstr "Voeding frequenties (afgelopen 2 weken)"
 
 #: dashboard/templatetags/cards.py:371
 msgid "Feeding frequency"
@@ -1683,20 +1713,20 @@ msgstr "Uren slaap"
 
 #: reports/graphs/tummytime_duration.py:32
 msgid "Total duration"
-msgstr ""
+msgstr "Totaal duur"
 
 #: reports/graphs/tummytime_duration.py:39
 #: reports/graphs/tummytime_duration.py:53
 msgid "Number of sessions"
-msgstr ""
+msgstr "Aantal sessies"
 
 #: reports/graphs/tummytime_duration.py:48
 msgid "<b>Total Tummy Time Durations</b>"
-msgstr ""
+msgstr "<b>Totaal Buikligggen Duur</b>"
 
 #: reports/graphs/tummytime_duration.py:51
 msgid "Total duration (minutes)"
-msgstr ""
+msgstr "Totaal duur (minuten)"
 
 #: reports/graphs/weight_weight.py:27
 msgid "<b>Weight</b>"
@@ -1719,4 +1749,4 @@ msgstr "Er is niet voldoende data om dit rapport te maken."
 #: reports/templates/reports/tummytime_duration.html:4
 #: reports/templates/reports/tummytime_duration.html:8
 msgid "Total Tummy Time Durations"
-msgstr ""
+msgstr "Totaal Buikligggen Duur"
